# aprg

./: .clang-format  404.html  GitCommands.txt  GitNotes.txt  README.md  index.html
AprgAlgebra/AprgAlgebra/: CMakeLists.txt
AprgAlgebra/AprgAlgebra/cmake/: FilesAndDirectories.cmake
AprgAlgebra/AprgAlgebra/tst/AlgebraTests/: ComboTests_unit.cpp
AprgAudioManipulator/AprgAudioManipulator/: CMakeLists.txt
AprgAudioManipulator/AprgAudioManipulator/cmake/: FilesAndDirectories.cmake
AprgAudioManipulator/AprgAudioManipulator/main/: main.cpp
AprgAudioManipulator/AprgAudioManipulator/src/AudioManipulator/: AudioManipulator.cpp  AudioManipulator.hpp  CommonTypes.hpp  NearestSamples.cpp  NearestSamples.hpp  NewSamplesBuilder.cpp  NewSamplesBuilder.hpp  Utilities.cpp  Utilities.hpp
AprgAudioManipulator/AprgAudioManipulator/tst/AudioManipulatorTests/: AudioManipulator_unit.cpp  Utilities_unit.cpp
AprgBitmapManipulator/AprgBitmapManipulator/: CMakeLists.txt
AprgBitmapManipulator/AprgBitmapManipulator/cmake/: FilesAndDirectories.cmake
AprgBitmapManipulator/AprgBitmapManipulator/src/BitmapManipulator/: AnimeFilter.cpp  AnimeFilter.hpp  AnimizeColor.cpp  AnimizeColor.hpp  BitmapFilters.cpp  BitmapFilters.hpp  ColorStatistics.cpp  ColorStatistics.hpp  ColorUtilities.cpp  ColorUtilities.hpp  (+10 more)
AprgBooleanAlgebra/AprgBooleanAlgebra/: CMakeLists.txt
AprgBooleanAlgebra/AprgBooleanAlgebra/cmake/: FilesAndDirectories.cmake
AprgCommon/AprgCommon/: CMakeLists.txt
AprgCommon/AprgCommon/cmake/: FilesAndDirectories.cmake
AprgFileExtractor/AprgFileExtractor/: CMakeLists.txt
AprgFileExtractor/AprgFileExtractor/cmake/: FilesAndDirectories.cmake
AprgFileExtractor/AprgFileExtractor/main/: main.cpp
AprgGeometry/AprgGeometry/: CMakeLists.txt
AprgGeometry/AprgGeometry/cmake/: FilesAndDirectories.cmake
AprgGnuPlot/AprgGnuPlot/: CMakeLists.txt
AprgGnuPlot/AprgGnuPlot/cmake/: FilesAndDirectories.cmake
AprgGnuPlot/AprgGnuPlot/docs/: GnuPlotInstallInLinux.txt  GnuPlotInstallInWindows.txt  GnuPlotReferenceLocation.txt
AprgGnuPlot/AprgGnuPlot/src/: gnuplot-iostream.h
AprgGnuPlot/AprgGnuPlot/tst/: example-data-1d.cc  example-data-2d.cc  example-interactive.cc  example-misc.cc  test-assert-depth-colmajor.cc  test-assert-depth.cc  test-empty.cc  test-noncopyable.cc  test-outputs.cc
AprgGraph/AprgGraph/: CMakeLists.txt
AprgGraph/AprgGraph/cmake/: FilesAndDirectories.cmake
AprgGsl/AprgGsl/: CMakeLists.txt
AprgGsl/AprgGsl/cmake/: FilesAndDirectories.cmake
AprgUniqueProblems/AprgUniqueProblems/: CMakeLists.txt
AprgUniqueProblems/AprgUniqueProblems/cmake/: FilesAndDirectories.cmake
AprgUniqueProblems/AprgUniqueProblems/main/: main.cpp
AprgWebCrawler/AprgWebCrawler/: CMakeLists.txt
AprgWebCrawler/AprgWebCrawler/cmake/: FilesAndDirectories.cmake
AprgWebCrawler/AprgWebCrawler/src/: main.cpp
Boost/Boost/: BoostGuideInLinux.txt  BoostGuideInWindows.txt  CMakeLists.txt
Boost/Boost/cmake/: FilesAndDirectories.cmake  IncludeBoost.cmake
Boost/Boost/tst/: Boost_unit.cpp
CPlusPlusExamples/CPlusPlusExamples/: CMakeLists.txt
CPlusPlusExamples/CPlusPlusExamples/cmake/: FilesAndDirectories.cmake
Chess/ChessCombi/ChessCombi/: CMakeLists.txt
Chess/ChessPeek/ChessPeek/: CMakeLists.txt
Chess/ChessUtilities/ChessUtilities/: CMakeLists.txt
CodingCompetitions/GoogleKickStart/GoogleKickStart/: CMakeLists.txt
CurlCpp/CurlCpp/: CMakeLists.txt
CurlCpp/CurlCpp/CMake/: FilesAndDirectories.cmake
CurlCpp/CurlCpp/cmake/: FilesAndDirectories.cmake
CurlCpp/CurlCpp/src/: CMakeLists.txt  CurlInterface.cpp  CurlInterface.hpp  CurlInterfaceHelpers.cpp  CurlInterfaceHelpers.hpp  DownloadType.hpp  OutputFileType.hpp  cookie.cpp  cookie.h  cookie_datetime.cpp  cookie_datetime.h  curl_config.h  curl_cookie.h  curl_easy.cpp  curl_exception.h  curl_global.h  curl_header.h  curl_share.cpp  curl_writer.cpp
CurlCpp/CurlCpp/tst/: easy.cpp
CurlCpp/CurlCpp/tutorial/: JosephP91_curlcpp · GitHub.htm
DesignPatterns/BasicExamples/: CMakeLists.txt
DesignPatterns/BasicExamples/cmake/: FilesAndDirectories.cmake
DesignPatterns/JakubVojvoda/: CMakeLists.txt
FileDestructor/FileDestructor/: CMakeLists.txt
FileDestructor/FileDestructor/cmake/: FilesAndDirectories.cmake
FileDestructor/FileDestructor/main/: main.cpp
FileDestructor/FileDestructor/src/: FileDestructor.cpp  FileDestructor.hpp
FileDestructor/FileDestructor/tst/: FileDestructor_unit.cpp
OldProjects/BtsLogAnalyzer/BtsLogAnalyzer/: CMakeLists.txt
QuickestWayToProgram/QuickestWayToProgram/: CMakeLists.txt
QuickestWayToProgram/QuickestWayToProgram/cmake/: FilesAndDirectories.cmake
QuickestWayToProgram/QuickestWayToProgram/src/: ArraySize.hpp  NsapHelper.cpp  NsapHelper.hpp  QuickestWayToProgram.cpp  QuickestWayToProgram.hpp  TTransportLayerAddress.h  glo_def.h
QuickestWayToProgram/QuickestWayToProgram/tst/: QuickestWayToProgram_unit.cpp
SOOSA/SOOSA/: CMakeLists.txt
SOOSA/SOOSA/basis/: basis.html
SOOSA/SOOSA/cmake/: FilesAndDirectories.cmake
SOOSA/SOOSA/main/: main.cpp
SOOSA/SOOSA/src/: InputConfiguration.cpp  InputConfiguration.hpp  SOOSA.cpp  SOOSA.hpp  SoosaConfiguration.cpp  SoosaConfiguration.hpp  UserInterface.cpp  UserInterface.hpp
SOOSA/SOOSA/srcOld/: SOOSA.c
SOOSA/SOOSA/tst/: InputConfiguration_unit.cpp  SOOSA_unit.cpp  SoosaConfiguration_unit.cpp
SimplestDesignToCopyForLibraries/SimplestDesignToCopyForLibraries/: CMakeLists.txt
SimplestDesignToCopyForLibraries/SimplestDesignToCopyForLibraries/cmake/: FilesAndDirectories.cmake
TddLecture/TddLecture/: CMakeLists.txt  CMakePresets.json
TddLecture/TddLecture/cmake/: FilesAndDirectories.cmake
TddLecture/TddLecture/main/: main.cpp
TddLecture/TddLecture/src/: TddLecture.cpp  TddLecture.hpp
TddLecture/TddLecture/tst/: TddLecture_unit.cpp
WcdmaTools/WcdmaToolsBackend/: CMakeLists.txt
WcdmaTools/WcdmaToolsBackend/cmake/: FilesAndDirectories.cmake
benchmark/benchmark/: CMakeLists.txt
benchmark/benchmark/cmake/: FilesAndDirectories.cmake
gtest/AprgCmakeInclude/: CMakeLists.txt  SetGTestDirectory.cmake  gmock.cmake  gtest.cmake
(+4548 files in other folders)
